packages/yew-macro/tests/function_component_attr/lifetime-props-param-fail.stderr
error: reference must not have a lifetime
 --> $DIR/lifetime-props-param-fail.rs:9:17
  |
9 | fn comp(props: &'static Props) -> Html {
  |                 ^^^^^^^
